--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-dom": "^17.0.11",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
