--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/styled-components": "^5.1.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@types/node": "^17.0.18",
     "@types/react-dom": "^17.0.11",
+    "@types/react-highlight-words": "^0.16.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1"
